add a win screen

--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -35,3 +35,29 @@
     visibility: hidden;
 }
 
+#winScreen {
+    padding-left: 3em;
+    padding-top: 3em;
+    color: aliceblue;
+    width: 800px;
+    height: 600px;
+    background-color: black;
+    top: 0px;
+    position: fixed;
+    visibility: hidden;
+
+}
+
+#winScreen div { 
+    text-align: center;
+    margin: auto;
+    width: 50%;
+
+}
+
+#winScreen img {
+    width: 200px;
+    left: 400px;
+    margin: auto;
+}
+
